--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-/resources/models/en*
-/pom.xml
+pom.xml
+resources/models/opennlp/en*
 *jar
-/lib
-/classes
-/native
-/.lein-failures
-/checkouts
-/.lein-deps-sum
-.lein
+lib/
+classes/
+native/
+checkouts/
+.lein-*
